syntax = "proto3";

package server;

import "DeviceProperties.proto";

option java_package = "com.fluentbuild.apollo.work";
option java_outer_classname = "FindWorkRequestProto";

message FindWorkRequest {
    device.DeviceProperties deviceProperties = 1;
}
